// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`module: skipped export: mergeSkipped When previous state exists When skipped fields exist When skipped field exists in previous state Error field Should copy prev field state over 1`] = `
Object {
  "doneCallbacks": Array [],
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {},
  "skippedTests": Object {
    "field_2": true,
  },
  "suiteId": "suiteId_1",
  "tests": Object {
    "field_2": Object {
      "errorCount": 1,
      "errors": Array [
        "error_string",
      ],
      "warnCount": 0,
      "warnings": Array [],
    },
  },
}
`;

exports[`module: skipped export: mergeSkipped When previous state exists When skipped fields exist When skipped field exists in previous state Warning field Should copy prev field state over 1`] = `
Object {
  "doneCallbacks": Array [],
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {},
  "skippedTests": Object {
    "field_1": true,
  },
  "suiteId": "suiteId_1",
  "tests": Object {
    "field_1": Object {
      "errorCount": 0,
      "errors": Array [],
      "warnCount": 1,
      "warnings": Array [
        "warning_string",
      ],
    },
  },
}
`;

exports[`module: skipped export: setSkippedGroup When group is not yet skipped Should mark group as skipped 1`] = `
Object {
  "doneCallbacks": Array [],
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {
    "group_1": true,
  },
  "skippedTests": Object {},
  "suiteId": "suiteId_1",
  "tests": Object {},
}
`;

exports[`module: skipped export: setSkippedTest When field is not yet skipped Should mark field as skipped 1`] = `
Object {
  "doneCallbacks": Array [],
  "exclusive": Object {},
  "fieldCallbacks": Object {},
  "groups": Object {},
  "lagging": Array [],
  "name": "suite_1",
  "pending": Array [],
  "skippedGroups": Object {},
  "skippedTests": Object {
    "field_1": true,
  },
  "suiteId": "suiteId_1",
  "tests": Object {},
}
`;
